# cpd-ai

./: .gitignore  README.md  pom.xml  pyproject.toml
iac/: main.tf  outputs.tf  providers.tf  variables.tf
iac/modules/glue/: main.tf  outputs.tf  variables.tf
iac/modules/iam/: main.tf  outputs.tf  variables.tf
iac/modules/lambda/: main.tf  outputs.tf  variables.tf
iac/modules/s3/: main.tf  outputs.tf
iac/modules/sqs/: main.tf  outputs.tf  variables.tf
scripts/: build_zip.py
src/main/java/com/cloudpid/ai/: SparkDriver.java
src/main/java/com/cloudpid/ai/agents/: AgentResponse.java  AnthropicProvider.java  CardRanker.java  CardsAgent.java  Provider.java  ToolCall.java
src/main/java/com/cloudpid/ai/aws/: GlueService.java  LambdaService.java  S3Service.java  SqsService.java
src/main/java/com/cloudpid/ai/config/: AppConfig.java  AppConfigFactory.java
src/main/java/com/cloudpid/ai/rag/: Embedder.java  Ingestor.java  RagGenerator.java  RagGeneratorFactory.java  RagPipeline.java  (+3 more)
src/main/python/: credit_cards.py  spark_verify.py  sqs_to_s3.py
src/main/python/agents/: cards_agent.py  provider.py  ranker.py
src/main/python/core/: aws.py  config.ini  config.py  spark_utils.py
src/main/python/rag/: __init__.py  embedder.py  ingest.py  pipeline.py  vector_store.py
src/main/resources/: app.properties  credit_cards.json  credit_transactions.json  log4j2.xml
src/main/rust/: Cargo.toml
src/main/rust/src/: main.rs
src/main/rust/src/agents/: anthropic_provider.rs  cards_agent.rs  mod.rs  provider.rs  ranker.rs
src/main/rust/tests/: cards_agent_tests.rs  ranker_tests.rs
src/test/python/: credit_cards_test.py  mcp_agent_test.py  rag_test.py  sparkb_test.py  sqs_to_s3_test.py
src/test/python/core/: aws_test.py  config_test.py
src/test/resources/: log4j2-test.xml
(+12 files in other folders)
