[package]
name = "cpd-ai-agents"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cards-agent"
path = "src/main.rs"

[lib]
name = "cpd_ai_agents"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
